maryserver scripts removed endorsed dirs, updated version of log4j jar
git-svn-id: https://mary.opendfki.de/repos/trunk@1909 953a6561-930b-0410-b2a6-db37d1b2ae63