@@ -37,6 +37,6 @@ set MARY_BASE=$INSTALL_PATH
 set SHPROT_BASE=%MARY_BASE%\lib\modules\shprot
 set PATH=%MARY_BASE%\lib\windows;%PATH%
 
-set CLASSPATH="%MARY_BASE%\java\mary-common.jar;%MARY_BASE%\java\log4j-1.2.8.jar"
-java -ea -Xms40m -Xmx512m -cp %CLASSPATH% "-Dmary.base=%MARY_BASE%" "-Djava.endorsed.dirs=%MARY_BASE%\lib\endorsed" %1 %2 %3 %4 %5 %6 %7 %8 %9 marytts.server.Mary
+set CLASSPATH="%MARY_BASE%\java\mary-common.jar;%MARY_BASE%\java\log4j-1.2.15.jar"
+java -ea -Xms40m -Xmx512m -cp %CLASSPATH% "-Dmary.base=%MARY_BASE%" %1 %2 %3 %4 %5 %6 %7 %8 %9 marytts.server.Mary
 
